--- a/index.html
+++ b/index.html
@@ -41,14 +41,11 @@
         <section class="firstSection hide" id="firstSection">
           <div class="leftSection">
             <h1>Hi,</h1>
-            My name is <span class="purple">Subham</span>
-            <div>and I am a passionate</div>
+            My name is <span class="purple">Deepal</span>
+            <div>and I am</div>
             <!-- Element to contain animated typing -->
             <span id="element"></span>
-            <div class="botton">
-              <button class="btn" id="downloadBtn">Download Resume</button>
-              <p id="message">Resume not available</p>
-            </div>
+
           </div>
           <div class="rightSection">
             <img src="profile-pic/boy.png" alt="img" />
@@ -63,7 +60,7 @@
         <section class="secondSection hide" id="secondSection">
           <!-- <h3>Intro</h3> -->
           <p>
-            <span class="hi">Hi,</span> I'm Subham Narayan Deb, and I reside in
+            <span class="hi">Hi,</span> I'm DeepaK Mirpuri, and I reside in
             Jamshedpur, Jharkhand. This is my portfolio website where I showcase
             my web development <span class="p">projects</span>. Currently, I am
             actively involved in web development, and I have gained expertise in
@@ -512,8 +509,8 @@
       </div>
 
       <div class="footer hide">
-        <span class="text1">Developer By ::</span
-        ><span class="text2"> Subham Narayan Deb</span>
+        <span class="text1">Developed By ::</span
+        ><span class="text2">Nikhil M</span>
       </div>
     <div>
     <script src="script.js"></script>
@@ -523,7 +520,7 @@
     <!-- Setup and start animation! -->
     <script>
       let typed = new Typed("#element", {
-        strings: ["Web Developer", "UI & UX Designer", "Photographer", "Photo And Video Editor"],
+        strings: ["A Father", "Land Owner", "An Entrepreneur"],
         typeSpeed: 50,
       });
     </script>
