--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="firstSection hide" id="firstSection">
           <div class="leftSection">
             <h1>Hi,</h1>
-            My name is <span class="purple">Deepal</span>
+            My name is <span class="purple">Deepak</span>
             <div>and I am</div>
             <!-- Element to contain animated typing -->
             <span id="element"></span>
@@ -520,7 +520,7 @@
     <!-- Setup and start animation! -->
     <script>
       let typed = new Typed("#element", {
-        strings: ["A Father", "Land Owner", "An Entrepreneur"],
+        strings: ["A Father", "A Land Owner", "An Entrepreneur"],
         typeSpeed: 50,
       });
     </script>
