--- a/index.html
+++ b/index.html
@@ -87,48 +87,48 @@
           <!-- *****************  -->
 
           <div class="BAR">
-            <h3 class="headinga">Some of my knowledge</h3>
+            <h3 class="headinga">My Languages</h3>
             <div class="progress-body" id="progressBody">
               <div class="progress-bar-container">
                 <div class="progress-bar html">
-                  <progress id="html" min="0" max="100" value="60"></progress>
+                  <progress id="html" min="0" max="100" value="100"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="html">HTML</label>
+                  <label for="html">English</label>
                 </h2>
               </div>
 
               <div class="progress-bar-container">
                 <div class="progress-bar css">
-                  <progress id="css" min="0" max="100" value="50"></progress>
+                  <progress id="css" min="0" max="100" value="100"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="css">CSS</label>
+                  <label for="css">Hindi</label>
                 </h2>
               </div>
 
               <div class="progress-bar-container">
                 <div class="progress-bar js">
-                  <progress id="js" min="0" max="100" value="30"></progress>
+                  <progress id="js" min="0" max="100" value="100"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="js">JavaScript</label>
+                  <label for="js">Sindhi</label>
                 </h2>
               </div>
               <div class="progress-bar-container">
                 <div class="progress-bar react">
-                  <progress id="React" min="0" max="100" value="5"></progress>
+                  <progress id="React" min="0" max="100" value="50"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="React">React Js</label>
+                  <label for="React">Maharathi</label>
                 </h2>
               </div>
               <div class="progress-bar-container">
                 <div class="progress-bar node">
-                  <progress id="Node" min="0" max="100" value="0"></progress>
+                  <progress id="Node" min="0" max="100" value="10"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="node">Node Js</label>
+                  <label for="node">Spanish</label>
                 </h2>
               </div>
             </div>
