Revise introduction in index.html
Updated personal introduction and background information.

--- a/index.html
+++ b/index.html
@@ -60,26 +60,15 @@
         <section class="secondSection hide" id="secondSection">
           <!-- <h3>Intro</h3> -->
           <p>
-            <span class="hi">Hi,</span> I'm DeepaK Mirpuri, and I reside in
-            Jamshedpur, Jharkhand. This is my portfolio website where I showcase
-            my web development <span class="p">projects</span>. Currently, I am
-            actively involved in web development, and I have gained expertise in
-            several programming languages.
-            <br />
-            If you need any assistance with web development or have any
-            web-related projects in mind, feel free to get in touch with me. I
-            would be more than happy to help.
-            <br />
-            Apart from web development, I am also passionate about photography.
-            Additionally, I thoroughly enjoy photo and video editing, and I
-            consider myself skilled in this area as well.
-            <br />
-            If you require any help with photography, photo editing, or video
-            editing, you can confidently rely on me. I'd be delighted to assist
-            you.
-            <br />
-            Thank you for providing this opportunity. If you are interested in
-            collaborating with me, please don't hesitate to reach out.
+            <span class="hi">Hi, my name is Deepak. 
+              I was born in India and now proudly call Jamaica home. 
+              With nearly 28 years in the jewellery world, 
+              I founded Love Jewellers from a simple belief: the most special things in life are created with care and intention. 
+              While my work has been a big part of my journey, my greatest joy comes from being with my family.
+              I love spending time with my wife and my two children, Henna, Sahil, and Nikhil. 
+              They inspire me every day and remind me what truly matters. 
+              Whether it’s sharing a laugh, celebrating milestones, or enjoying the little moments together, 
+              family is at the heart of everything I do.
           </p>
 
           <!-- *****************  -->
@@ -108,7 +97,7 @@
               </div>
 
               <div class="progress-bar-container">
-                <div class="progress-bar js">
+                <div class="progress-bar css">
                   <progress id="js" min="0" max="100" value="100"></progress>
                 </div>
                 <h2 class="pro-text">
