Change progress bar class from 'css' to 'js'

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
 
               <div class="progress-bar-container">
-                <div class="progress-bar css">
+                <div class="progress-bar js">
                   <progress id="js" min="0" max="100" value="100"></progress>
                 </div>
                 <h2 class="pro-text">
