Remove Instagram contact information from index.html
Removed Instagram message from the footer section.

--- a/index.html
+++ b/index.html
@@ -478,13 +478,7 @@
           </div>
           <!-- /flip-card-container -->
         </section>
-        <p class="insta hide">
-          If you want to see more photos or get photos edited, please send a
-          message on Instagram.
-          <a href="https://www.instagram.com/_photoz.x._/" target="_blank">
-            <i class="fa-brands fa-instagram fa-2xl"></i> _photoz.x._
-          </a>
-        </p>
+       
       </div>
 
       <!-- ====== My-Project[Section's] ====== -->
@@ -498,7 +492,7 @@
       </div>
 
       <div class="footer hide">
-        <span class="text1">Developed By ::</span
+        <span class="text1">Developed By :</span
         ><span class="text2">Nikhil M</span>
       </div>
     <div>
