Change 'Projects' section to 'Interests'

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="nav" id="nav">
         <img src="img/logo.png" alt="logo" class="logo" />
         <section>
-          <p class="project" id="project">Project's</p>
-          <p class="Contact" id="contact">Contact Me</p>
+          <p class="project" id="project">Interests</p>
+          <p class="Contact" id="contact"></p>
         </section>
       </div>
       <div class="card-blur" id="firstPage">
@@ -485,7 +485,7 @@
 
       <div class="myallproject" id="myprojects">
         <header class="project-header">
-        <h1>My Projects</h1>
+        <h1>My Interests</h1>
         <div id="back" class="back-button"><i class="fa-solid fa-arrow-left fa-fade" style="color: #ffffff;"></i></div>
         </header>
         <main id="projects-container"></main>
