Add portfolio section to index.html
Added a portfolio section with a Music Recommender System item.

--- a/index.html
+++ b/index.html
@@ -488,7 +488,17 @@
         <h1>My Interests</h1>
         <div id="back" class="back-button"><i class="fa-solid fa-arrow-left fa-fade" style="color: #ffffff;"></i></div>
         </header>
-        <main id="projects-container"></main>
+        <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <center><h4>Music Recommender System</h4></center>
+          <div class="portfolio-wrap">
+            <img src="img/mall.webp" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="footer hide">
