--- a/index.html
+++ b/index.html
@@ -500,6 +500,8 @@
           </div>
         </div>
       </div>
+      </div>
+        
 
       <div class="footer hide">
         <span class="text1">Developed By :</span
