--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Music Recommender System</h4></center>
+          <center><h4>Outer Space</h4></center>
           <div class="portfolio-wrap">
             <img src="img/mall.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
