Replace images with new photo assets

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="card-front">
                 <figure class="mela">
                   <div class="img-bg"></div>
-                  <img src="img/mela.webp" alt="mela" />
+                  <img src="img/Dad1.jpg" alt="mela" />
                 </figure>
 
                 <ul>
@@ -152,10 +152,9 @@
               <div class="card-back">
                 <figure class="mela blur">
                   <div class="img-bg"></div>
-                  <img src="img/mela.webp" alt="img" />
+                  <img src="img/Dad1.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button photos-one" data-instagram-link="https://www.instagram.com/p/CiHfIcXJM4b/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" >Visit</button>
 
                 <div class="design-container">
                   <span class="design design--1"></span>
@@ -178,7 +177,7 @@
               <div class="card-front">
                 <figure class="nature">
                   <div class="img-bg"></div>
-                  <img src="img/nature1.webp" alt="Img" />
+                  <img src="img/Dad2.jpg" alt="Img" />
                 </figure>
                 <ul>
                   <li>
@@ -194,7 +193,7 @@
               <div class="card-back">
                 <figure class="nature blur">
                   <div class="img-bg"></div>
-                  <img src="img/nature1.webp" alt="img" />
+                  <img src="img/Dad2.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-two" data-instagram-link="https://www.instagram.com/p/CjxQYHapBWQ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
@@ -220,7 +219,7 @@
               <div class="card-front">
                 <figure class="moon">
                   <div class="img-bg"></div>
-                  <img src="img/moon.webp" alt="img" />
+                  <img src="img/Dad5.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -238,7 +237,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="moon blur">
                   <div class="img-bg"></div>
-                  <img src="img/moon.webp" alt="img" />
+                  <img src="img/Dad5.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-three" data-instagram-link="https://www.instagram.com/p/CqLXXxHJOwQ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
@@ -264,7 +263,7 @@
               <div class="card-front">
                 <figure class="road">
                   <div class="img-bg"></div>
-                  <img src="img/road.webp" alt="img" />
+                  <img src="img/Dad6.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -281,7 +280,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="road blur">
                   <div class="img-bg"></div>
-                  <img src="img/road.webp" alt="img" />
+                  <img src="img/Dad6.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button"id="photo-four" data-instagram-link="https://www.instagram.com/p/CeD-4bVsJRh/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
