Replace images in flip cards with new photos

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <div class="card-front">
                 <figure class="sunrise">
                   <div class="img-bg"></div>
-                  <img src="img/sunrise.webp" alt="img" />
+                  <img src="img/Dad3.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -324,7 +324,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="sunrise blur">
                   <div class="img-bg"></div>
-                  <img src="img/sunrise.webp" alt="img" />
+                  <img src="img/Dad3.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-five" data-instagram-link="https://www.instagram.com/p/Cj7trTzJUCW/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
@@ -350,7 +350,7 @@
               <div class="card-front">
                 <figure class="flower">
                   <div class="img-bg"></div>
-                  <img src="img/flower.jpg" alt="img" />
+                  <img src="img/Dad4.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -368,7 +368,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="flower blur">
                   <div class="img-bg"></div>
-                  <img src="img/flower.jpg" alt="img" />
+                  <img src="img/Dad4.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-six" data-instagram-link="https://www.instagram.com/p/BrcaGe_BblD/?utm_source=ig_web_copy_link">Visit</button>
@@ -395,7 +395,7 @@
               <div class="card-front">
                 <figure class="coin">
                   <div class="img-bg"></div>
-                  <img src="img/indian coin.jpg" alt="img" />
+                  <img src="img/Dad7.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -414,7 +414,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="coin blur">
                   <div class="img-bg"></div>
-                  <img src="img/indian coin.jpg" alt="img" />
+                  <img src="img/Dad7.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-seven" data-instagram-link="https://www.instagram.com/p/COxZiKupmrb/?utm_source=ig_web_copy_link">Visit</button>
@@ -441,7 +441,7 @@
               <div class="card-front">
                 <figure class="">
                   <div class="img-bg"></div>
-                  <img src="img/mall.webp" alt="img" />
+                  <img src="img/Dad8.jpg" alt="img" />
                 </figure>
 
                 <ul>
@@ -456,7 +456,7 @@
                 <!-- only if the image is necessary -->
                 <figure class="blur">
                   <div class="img-bg"></div>
-                  <img src="img/mall.webp" alt="img" />
+                  <img src="img/Dad8.jpg" alt="img" />
                 </figure>
 
                 <button class="visit-button" id="photo-eight" data-instagram-link="https://www.instagram.com/p/Crk_Om2pggT/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
