Update quotes in index.html

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                 </figure>
 
                 <ul>
-                  <li>"Band Of Colors✨"</li>
+                  <li>"Life has no remote. Get up and Change it yourself."</li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -181,8 +181,7 @@
                 </figure>
                 <ul>
                   <li>
-                    "Sailing Through the Celestial River Aboard the Majestic
-                    Moon Ship🌙✨"
+                    "Difficult roads lead to beutiful definitions🌙✨"
                   </li>
                 </ul>
                 <p class="insta-link">
@@ -268,7 +267,7 @@
 
                 <ul>
                   <li>
-                    "Do not fear. The rain is only here to help you grow🌱"
+                    "It always seems impossible until it is done.🌱"
                   </li>
                 </ul>
                 <p class="insta-link">
@@ -311,8 +310,7 @@
 
                 <ul>
                   <li>
-                    "Embracing the dawn of a new day, as the sun paints the sky
-                    with hues of hopes and possibility.🌅✨"
+                    "The best view comes after the hardest climb.🌅✨"
                   </li>
                 </ul>
                 <p class="insta-link">
@@ -355,8 +353,7 @@
 
                 <ul>
                   <li>
-                    "Nurtured by nature's hand, a purple bloom whispers elegance
-                    and grace in every petal.💜🌸"
+                    "Focus on the goals. Not the obstacles.💜🌸"
                   </li>
                 </ul>
                 <p class="insta-link">
@@ -400,9 +397,7 @@
 
                 <ul>
                   <li>
-                    "Before money, there's nothing in front of a person. Because
-                    true values and the best aspects of humanity cannot be
-                    measured by currency.💴💲"
+                    "Your only limit is your mind💴"
                   </li>
                 </ul>
                 <p class="insta-link">
@@ -445,7 +440,7 @@
                 </figure>
 
                 <ul>
-                  <li>"Sky above, possibilities within.👍"</li>
+                  <li>"Success is made of 1% luck and 99% sweat.👍"</li>
                 </ul>
                 <p class="insta-link">
                   <span>_photoz.x._</span>
