Adjust portfolio item headings and image dimensions
Updated the styling of portfolio item headings and image sizes for better presentation.

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Outer Space</h4></center>
+         <h4 style="text-align: left;">Outer Space</h4>
           <div class="portfolio-wrap">
             <img src="img/space.jpg" style="width:300px; height:200px;" alt="">
             <div class="portfolio-info">
@@ -498,9 +498,9 @@
 
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Cricket</h4></center>
+         <h4 style="text-align: left;">Cricket</h4>
           <div class="portfolio-wrap">
-            <img src="img/cric.jpg" style="width:100px; height:200px;" alt="">
+            <img src="img/cric.jpg" style="width:300px; height:200px;" alt="">
             <div class="portfolio-info">
 
           
@@ -510,9 +510,9 @@
         </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Beaches</h4></center>
+         <h4 style="text-align: left;">Beaches</h4>
           <div class="portfolio-wrap">
-           <img src="img/beach.jpg" style="width:50px; height:50px;" alt="">
+           <img src="img/beach.jpg" style="width:300px; height:200px;" alt="">
             <div class="portfolio-info">
 
           
