Update Instagram handle and remove buttons
Replaced Instagram handle '_photoz.x._' with '$D.B$' in multiple sections and removed several 'Visit' buttons.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -195,7 +195,6 @@
                   <img src="img/Dad2.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-two" data-instagram-link="https://www.instagram.com/p/CjxQYHapBWQ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
 
                 <div class="design-container">
                   <span class="design design--1"></span>
@@ -228,7 +227,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -239,7 +238,6 @@
                   <img src="img/Dad5.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-three" data-instagram-link="https://www.instagram.com/p/CqLXXxHJOwQ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
@@ -271,7 +269,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -282,7 +280,6 @@
                   <img src="img/Dad6.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button"id="photo-four" data-instagram-link="https://www.instagram.com/p/CeD-4bVsJRh/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
@@ -314,7 +311,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -325,7 +322,6 @@
                   <img src="img/Dad3.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-five" data-instagram-link="https://www.instagram.com/p/Cj7trTzJUCW/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
@@ -357,7 +353,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -368,7 +364,6 @@
                   <img src="img/Dad4.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-six" data-instagram-link="https://www.instagram.com/p/BrcaGe_BblD/?utm_source=ig_web_copy_link">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
@@ -401,7 +396,7 @@
                   </li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -412,7 +407,6 @@
                   <img src="img/Dad7.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-seven" data-instagram-link="https://www.instagram.com/p/COxZiKupmrb/?utm_source=ig_web_copy_link">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
@@ -443,7 +437,7 @@
                   <li>"Success is made of 1% luck and 99% sweat.👍"</li>
                 </ul>
                 <p class="insta-link">
-                  <span>_photoz.x._</span>
+                  <span>$D.B$</span>
                 </p>
               </div>
 
@@ -454,7 +448,6 @@
                   <img src="img/Dad8.jpg" alt="img" />
                 </figure>
 
-                <button class="visit-button" id="photo-eight" data-instagram-link="https://www.instagram.com/p/Crk_Om2pggT/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">Visit</button>
 
                 <!-- can add svg here and remove these eight spans -->
                 <div class="design-container">
