Change figure class in flip card component
Updated the figure element class in the flip card component.

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <div class="flip-card-container" style="--hue: 210">
             <div class="flip-card">
               <div class="card-front">
-                <figure class="coin">
+                <figure class="">
                   <div class="img-bg"></div>
                   <img src="img/Dad7.jpg" alt="img" />
                 </figure>
