Change label from 'Maharathi' to 'Marathi'

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <progress id="React" min="0" max="100" value="50"></progress>
                 </div>
                 <h2 class="pro-text">
-                  <label for="React">Maharathi</label>
+                  <label for="React">Marathi</label>
                 </h2>
               </div>
               <div class="progress-bar-container">
