Fix typo in quote from 'definitions' to 'destinations'

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </figure>
                 <ul>
                   <li>
-                    "Difficult roads lead to beutiful definitions🌙✨"
+                    "Difficult roads lead to beutiful destinations🌙✨"
                   </li>
                 </ul>
                 <p class="insta-link">
