Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           </div>
           <div class="rightSection">
-            <img src="profile-pic/boy.png" alt="img" />
+            <img src="img/dad sticker.jpg" alt="img" />
           </div>
         </section>
        
